@@ -9,6 +9,7 @@
 
 #include "pyc_types.h"
 #include "Pycasso.h"
+#include "Window.h"
 #include "Canvas.h"
 #include "Image.h"
 #include "EventQ.h"
