@@ -2,6 +2,7 @@ pycasso (0.2)
 
   * Complete event system defined
   * SDL event system implemented
+  * Basic class: Window
   * ...
 
 pycasso (0.1) unstable developer release
